// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React unit tests ResponseInfo It should render without errors 1`] = `
<div
  className="response-info"
>
  <t
    collapseStringsAfterLength={false}
    collapsed={false}
    defaultValue={null}
    displayDataTypes={false}
    displayObjectSize={false}
    enableClipboard={false}
    groupArraysAfterLength={100}
    iconStyle="triangle"
    indentWidth={2}
    name={false}
    onAdd={false}
    onDelete={false}
    onEdit={false}
    onSelect={false}
    shouldCollapse={false}
    sortKeys={false}
    src={
      Object {
        "res": "test",
      }
    }
    style={Object {}}
    theme={
      Object {
        "base00": "#0a090c",
        "base01": "red",
        "base02": "hsl(0, 0%, 35%)",
        "base03": "blue",
        "base04": "purple",
        "base05": "hsl(0, 100%, 75%)",
        "base06": "orange",
        "base07": "white",
        "base08": "white",
        "base09": "rgb(155, 187, 220)",
        "base0A": "hsl(0, 100%, 75%)",
        "base0B": "green",
        "base0C": "white",
        "base0D": "rgb(231, 194, 112)",
        "base0E": "#c678dd",
        "base0F": "rgb(53, 212, 199)",
      }
    }
    validationMessage="Validation Error"
  />
</div>
`;

exports[`React unit tests StateSideBar It should render without errors 1`] = `
<div
  className="state-sidebar"
>
  <div
    className="keylist-wrapper"
  >
    <div
      className="key-display "
      id="1"
      key="key0"
      onClick={[Function]}
    >
      1
    </div>
    <div
      className="key-display "
      id="2"
      key="key1"
      onClick={[Function]}
    >
      2
    </div>
    <div
      className="key-display "
      id="3"
      key="key2"
      onClick={[Function]}
    >
      3
    </div>
  </div>
</div>
`;

exports[`React unit tests StateValueDisplay It should render without errors 1`] = `
<div
  className="state-value"
>
  <t
    collapseStringsAfterLength={false}
    collapsed={false}
    defaultValue={null}
    displayDataTypes={false}
    displayObjectSize={false}
    enableClipboard={false}
    groupArraysAfterLength={100}
    iconStyle="triangle"
    indentWidth={2}
    name={false}
    onAdd={false}
    onDelete={false}
    onEdit={false}
    onSelect={false}
    shouldCollapse={false}
    sortKeys={false}
    src={
      Object {
        "testString": "hello",
        "testVal": 1,
      }
    }
    style={Object {}}
    theme={
      Object {
        "base00": "#0a090c",
        "base01": "red",
        "base02": "hsl(0, 0%, 35%)",
        "base03": "blue",
        "base04": "purple",
        "base05": "hsl(0, 100%, 75%)",
        "base06": "orange",
        "base07": "white",
        "base08": "white",
        "base09": "rgb(155, 187, 220)",
        "base0A": "hsl(0, 100%, 75%)",
        "base0B": "green",
        "base0C": "white",
        "base0D": "rgb(231, 194, 112)",
        "base0E": "#c678dd",
        "base0F": "rgb(53, 212, 199)",
      }
    }
    validationMessage="Validation Error"
  />
</div>
`;
